part2/grammar.txt
program ::= {statement}
statement ::= "PRINT" (expression | string) nl
            | "IF" comparison "THEN" nl {statement} "ENDIF" nl
		| "ELSE" "IF" comparison "THEN" nl {statement} "ENDIF" nl
		| "ELSE" nl {statement} "ENDELSE" nl
            | "WHILE" comparison "REPEAT" nl {statement} "ENDWHILE" nl
            | "LABEL" ident nl
            | "GOTO" ident nl
            | "LET" ident "=" expression nl
            | "INPUT" ident nl
comparison ::= expression (("==" | "!=" | ">" | ">=" | "<" | "<=") expression)+
expression ::= term {( "-" | "+" ) term}
term ::= unary {( "/" | "*" |"%") unary}
unary ::= ["+" | "-"] primary
primary ::= number | ident
nl ::= '\n'+
